Switch to zsh, neovim.

--- a/tmux.conf
+++ b/tmux.conf
@@ -3,55 +3,41 @@
 # wget -O ~/lxHome/scripts/setEnv/tmux.conf https://www.dropbox.com/s/or4isvf143pxu3e/tmux.conf?dl=0
 
 ### General options
+set-option -g default-shell /bin/zsh
 set -sg escape-time 1
 set -g history-limit 30000
-    # encoding
-set -g utf8
-set-window-option -g utf8 on
+
     # Window/Pane options
 set -g base-index 1
 set -g pane-base-index 1
-setw -g automatic-rename off
+set -g automatic-rename off
 set -g renumber-windows on
 set -g status-justify centre
-setw -g window-status-separator ""
-set -g window-status-current-format " #I:#{pane_current_command} #[fg=colour39,bg=colour234]"
-#set -g window-status-current-format "> #I:#{pane_current_command} #[fg=colour39,bg=colour234]>"
-set -g window-status-format " #I:#W "
-setw -g monitor-activity on
+set -g window-status-separator ""
+set -g window-status-current-format " <#I:#{pane_current_command}> "
+set -g window-status-format " #I:#{pane_current_command} "
+set -g monitor-activity on
+
     # StatusLine settings
 set -g status on
-set -g status-utf8 on
 set -g status-interval 1
 set -g visual-activity on
 set -g status-right-length "100"
 set -g status-left-length "100"
-set -g status-left  "#[fg=colour234,bg=colour192] #H #[fg=colour192,bg=colour236]#[fg=colour236,bg=default]"
-set -g status-right "#[bg=default,fg=colour236]#[bg=colour236,fg=colour192]#[bg=colour192,fg=colour234] %H:%M:%S %d/%m/%Y"
-#set -g status-left  "#[fg=colour234,bg=colour192] #h #[fg=colour192,bg=colour236]>#[fg=colour236,bg=default]>"
-#set -g status-right "#[bg=default,fg=colour236]<#[bg=colour236,fg=colour192]<#[bg=colour192,fg=colour234] %H:%M:%S %d/%m/%Y"
+set -g status-left  "#[fg=colour234,bg=colour72] #h #[fg=colour243,bg=colour108]>#[fg=colour237,bg=default]>"
+set -g status-right "#[bg=default,fg=colour237]<#[bg=colour243,fg=colour108]<#[bg=colour72,fg=colour234] %H:%M:%S %d/%m/%Y"
 set -g display-time 2000
 #set-option -g status position top
-    # Mouse control, bypasses mouse mode by holding shift and click
-set -g mode-mouse on
-set -g mouse-select-pane off
-set -g mouse-resize-pane off
-set -g mouse-select-window on
 
-### Color settings(bg234,fg192)
+### Color settings(bg235,fg223)
 set -g default-terminal "screen-256color-bce"
-set -g status-fg colour192
-set -g status-bg colour234
-set -g window-status-activity-attr bold
-setw -g window-status-activity-style "fg=colour228,bg=colour1,blink"
-setw -g window-status-style "fg=colour39,bg=colour234"
-setw -g window-status-current-bg colour39
-setw -g window-status-current-fg colour234
-set -g pane-border-fg colour39
-set -g pane-active-border-fg colour1
-set -g message-fg colour228
-set -g message-bg colour1
-set -g message-attr bold
+set -g status-style "fg=colour223,bg=colour235"
+set -g window-status-activity-style "fg=colour223,bg=colour124,blink"
+set -g window-status-current-style "fg=colour235,bg=colour223"
+set -g window-status-style "fg=colour223,bg=colour235"
+set -g pane-border-style "fg=colour245"
+set -g pane-active-border-style "fg=colour223"
+set -g message-style "fg=colour223,bg=colour124,bold"
 
 ### SSH_AUTH_SOCK handling
 set -g update-environment "DISPLAY SSH_ASKPASS SSH_AGENT_PID SSH_CONNECTION WINDOWID XAUTHORITY"
@@ -128,13 +114,13 @@ bind-key -r M-Up resize-pane -U 5
 bind-key -r M-Down resize-pane -D 5
 bind-key -r M-Left resize-pane -L 5
 bind-key -r M-Right resize-pane -R 5
-bind-key -r C-Up resize-pane -U
-bind-key -r C-Down resize-pane -D
-bind-key -r C-Left resize-pane -L
-bind-key -r C-Right resize-pane -R #}}}
+bind-key -r C-Up resize-pane -U 1
+bind-key -r C-Down resize-pane -D 1
+bind-key -r C-Left resize-pane -L 1
+bind-key -r C-Right resize-pane -R 1#}}}
     # Use something easier to type as the prefix.
 set-option -g status-keys vi
-setw -g mode-keys vi
+set -g mode-keys vi
 set -g prefix C-a
 unbind C-b; bind C-a send-prefix
     # vim-style setting
@@ -144,10 +130,13 @@ unbind h; bind h select-pane -L
 unbind j; bind j select-pane -D
 unbind k; bind k select-pane -U
 unbind l; bind l select-pane -R
+unbind -T copy-mode-vi v;     bind -T copy-mode-vi 'v'   send -X begin-selection  # Begin selection in copy mode.
+unbind -T copy-mode-vi 'C-v'; bind -T copy-mode-vi 'C-v' send -X rectangle-toggle # Begin selection in copy mode.
+unbind -T copy-mode-vi y;     bind -T copy-mode-vi 'y'   send -X copy-selection   # Yank  selection in copy mode.
     # pane setting
 unbind C-o; bind -r C-o rotate-window
 unbind z; bind z resize-pane -Z
-bind-key S command-prompt -p "Send pane to:"  "join-pane -t '%%'"
+bind S command-prompt -p "Send pane to:"  "join-pane -t '%%'"
     # window settings
 unbind 0; bind 0 select-window -t 10
 unbind n; bind -r n next-window
