--- a/tmux.conf
+++ b/tmux.conf
@@ -30,7 +30,8 @@ set -g display-time 2000
 #set-option -g status position top
 
 ### Color settings(bg235,fg223)
-set -g default-terminal "screen-256color-bce"
+set-option -g default-terminal "screen-256color"
+set-option -sa terminal-overrides ',xterm-256color:RGB'
 set -g status-style "fg=colour223,bg=colour235"
 set -g window-status-activity-style "fg=colour223,bg=colour124,blink"
 set -g window-status-current-style "fg=colour235,bg=colour223"
@@ -45,7 +46,7 @@ set-environment -g SSH_AUTH_SOCK $HOME/.ssh/ssh-auth-sock.$HOSTNAME
 
 ### keymappings
     # Restore default key-binding
-unbind-key -a #{{{
+unbind-key -a
 bind-key C-b send-prefix
 bind-key C-o rotate-window
 bind-key C-z suspend-client
@@ -94,8 +95,8 @@ bind-key s choose-session
 bind-key t clock-mode
 bind-key w choose-window
 bind-key x confirm-before -p "Kill-pane #P? (y/n)" kill-pane
-bind-key { swap-pane -U
-bind-key } swap-pane -D
+bind-key '{' swap-pane -U
+bind-key '}' swap-pane -D
 bind-key '~' show-messages
 bind-key PPage copy-mode -u
 bind-key -r Up select-pane -U
@@ -117,7 +118,8 @@ bind-key -r M-Right resize-pane -R 5
 bind-key -r C-Up resize-pane -U 1
 bind-key -r C-Down resize-pane -D 1
 bind-key -r C-Left resize-pane -L 1
-bind-key -r C-Right resize-pane -R 1#}}}
+bind-key -r C-Right resize-pane -R 1
+
     # Use something easier to type as the prefix.
 set-option -g status-keys vi
 set -g mode-keys vi
