--- a/ssh/config
+++ b/ssh/config
@@ -1,3 +1,5 @@
 host *
-ControlMaster auto
-ControlPath ~/.ssh/master-%r@%h:%p
+    ControlMaster auto
+    ControlPath ~/.ssh/master-%r@%h:%p
+    ServerAliveInterval 300
+    ServerAliveCountMax 5
