--- a/tmux.conf
+++ b/tmux.conf
@@ -2,6 +2,13 @@
 #      /usr/share/doc/examples/screen-keys.conf
 # wget -O ~/lxHome/scripts/setEnv/tmux.conf https://www.dropbox.com/s/or4isvf143pxu3e/tmux.conf?dl=0
 
+# tmux plux manager
+set -g @plugin 'tmux-plugins/tpm'
+#set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin 'ChanderG/tmux-notify'
+
 ### General options
 set-option -g default-shell /bin/zsh
 set -sg escape-time 1
@@ -146,3 +153,10 @@ unbind p; bind -r p previous-window
     # reload config without killing server
 bind R source-file ~/.tmux.conf \; display-message "tmux.conf reloaded..."
 
+
+# Plugin settings
+    # tmux-continuum
+set -g @continuum-restore 'on'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
